--- a/index.html
+++ b/index.html
@@ -2,45 +2,99 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>monde mir</title>
-    <!-- fontAwsome v5 -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <!-- my custom style -->
-    <link rel="stylesheet" href="css/main.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>monde mir</title>
+	<!-- fontAwsome v5 -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+	<!-- bootstrap -->
+	<link rel="stylesheet" type="text/css"
+		href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<!-- my custom style -->
+	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <!------------------- header ------------------->
-    <header>
-    	<div class="container">
-    		<div class="flex-control">
-    			<div class="logo"><h3>MONDE-MIR</h3></div>
-    			<nav>
-    				<ul>
-    					<li><a href="#">home</a></li>
-    					<li><a href="#">services</a></li>
-    					<li><a href="#">project</a></li>
-    					<li><a href="#">our team</a></li>
-    					<li><a href="#">news</a></li>
-    					<li><a href="#">contact</a></li>
-    				</ul>
-    			</nav>
-    			<div class="toggle">
-    				<i class="fa fa-bars"></i>
-    			</div>
+	<!------------------- header ------------------->
+	<header>
+		<div class="container">
+			<div class="flex-control">
+				<div class="logo">
+					<h3>MONDE-MIR</h3>
+				</div>
+				<nav>
+					<ul>
+						<li><a href="#">home</a></li>
+						<li><a href="#">services</a></li>
+						<li><a href="#">project</a></li>
+						<li><a href="#">our team</a></li>
+						<li><a href="#">news</a></li>
+						<li><a href="#">contact</a></li>
+					</ul>
+				</nav>
+				<div class="toggle">
+					<i class="fa fa-bars"></i>
+				</div>
 
-    		</div>
-    	</div>
+			</div>
+		</div>
 
-    </header>
-    <!-------------------- main-------------------->
-    <!-- 
-     --><script src="javascript/myjs.js"></script>
+	</header>
+	<!-------------------- main-------------------->
+	<main>
+		<div class="gallery-container">
+			<div class="slide-show-container">
+				<!-- --------------------------------------------------------------------->
+
+				<!-- START left and right button -->
+				<div class="left-arraw arraw-box">
+					<span class="arraw-btn gt"></span>
+				</div>
+				<div class="right-arraw arraw-box">
+					<span class="arraw-btn lt"></span>
+				</div>
+				<!-- END left and right button -->
+				<!-- --------------------------------------------------------------------->
+				<!-- START  image slide with caption inside class of images-holder-->
+				<div class="images-holder">
+					<img src="images/img1.jpg" alt="">
+					<div class="caption-container">
+						<p class="caption-text">khadada with lotfio 4</p>
+					</div>
+				</div>
+				<div class="images-holder">
+					<img src="images/img2.jpg" alt="">
+					<div class="caption-container">
+						<p class="caption-text">khadada with lotfio 4</p>
+					</div>
+				</div>
+				<div class="images-holder">
+					<img src="images/img3.jpg" alt="">
+					<div class="caption-container">
+						<p class="caption-text">khadada with lotfio 4</p>
+					</div>
+				</div>
+				<div class="images-holder">
+					<img src="images/img4.jpg" alt="">
+					<div class="caption-container">
+						<p class="caption-text">khadada with lotfio 4</p>
+					</div>
+
+				</div>
+				<!-- END  image slide with caption inside class of images-holder-->
+
+			</div>
+		</div>
+	</main>
+
+
+
+
+
+
+
+	<script src="javascript/myjs.js"></script>
 </body>
 
 </html>
